session.log
nohup: ignoring input
  File "/home/cc/cfo_project/citizen_cfo_core.py", line 92
    print("\n=== CITIZEN CFO� SECURED DASHBOARD ===")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0x99 in position 0: invalid start byte
